--- a/package.json
+++ b/package.json
@@ -8,15 +8,15 @@
     "start": "react-native start",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "run-ios": "react-native run-ios",
-    "build-android": "react-native bundle --platform android --dev false --entry-file index.js --bundle-output android/app/src/main/assets/index.android.bundle --assets-dest android/app/src/main/res",
+    "build-android": "react-native bundle --platform android --dev false --entry-file index.ts --bundle-output android/app/src/main/assets/index.android.bundle --assets-dest android/app/src/main/res",
     "run-android": "react-native run-android",
     "dev": "react-devtools",
     "ios6s": "react-native run-ios --simulator=\"iPhone 6s\"",
     "ios8s": "react-native run-ios --simulator=\"iPhone 8s\"",
     "ios6sp": "react-native run-ios --simulator=\"iPhone 6s Plus\"",
     "postinstall": "jetify",
-    "bundle-release-ios": "react-native bundle --platform ios --dev false --entry-file index.js --bundle-output ios-release.bundle --sourcemap-output ios-release.bundle.map",
-    "bundle-release-android": "react-native bundle --platform android --dev false --entry-file index.js --bundle-output android-release.bundle --sourcemap-output android-release.bundle.map",
+    "bundle-release-ios": "react-native bundle --platform ios --dev false --entry-file index.ts --bundle-output ios-release.bundle --sourcemap-output ios-release.bundle.map",
+    "bundle-release-android": "react-native bundle --platform android --dev false --entry-file index.ts --bundle-output android-release.bundle --sourcemap-output android-release.bundle.map",
     "pod": "npx pod-install ios"
   },
   "dependencies": {
